build: update dependencies
Rename config to manifest

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample NodeJS app using Docker",
   "main": "index.js",
   "scripts": {
-    "start": "rejoice -c config.json -p lib/modules",
+    "start": "rejoice -c config/manifest.json -p lib/modules",
     "test": "lab -La code -t 100",
     "test-cov-html": "lab -r html -o coverage.html -La code"
   },
@@ -24,15 +24,17 @@
   },
   "homepage": "https://github.com/cilindrox/node-docker-sample#readme",
   "dependencies": {
-    "boom": "^3.1.2",
-    "good": "^6.6.0",
-    "good-console": "^5.3.1",
-    "hapi": "^13.3.0",
-    "joi": "^8.0.5",
-    "rejoice": "^3.1.0"
+    "boom": "3.x.x",
+    "good": "7.x.x",
+    "good-console": "6.x.x",
+    "good-squeeze": "3.x.x",
+    "hapi": "13.x.x",
+    "joi": "8.x.x",
+    "rejoice": "3.x.x",
+    "white-out": "1.x.x"
   },
   "devDependencies": {
-    "code": "^2.2.0",
-    "lab": "^10.3.1"
+    "code": "3.x.x",
+    "lab": "10.x.x"
   }
 }
