--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "docker-sample",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "A sample NodeJS app using Docker",
-  "main": "index.js",
+  "main": "lib/modules/hello-world/index.js",
+  "private": true,
   "scripts": {
     "start": "rejoice -c config/manifest.json -p lib/modules",
     "test": "lab -La code -t 100",
@@ -24,17 +25,17 @@
   },
   "homepage": "https://github.com/cilindrox/node-docker-sample#readme",
   "dependencies": {
-    "boom": "3.x.x",
+    "boom": "4.x.x",
     "good": "7.x.x",
     "good-console": "6.x.x",
-    "good-squeeze": "3.x.x",
-    "hapi": "13.x.x",
-    "joi": "8.x.x",
-    "rejoice": "3.x.x",
-    "white-out": "1.x.x"
+    "good-squeeze": "5.x.x",
+    "hapi": "16.x.x",
+    "joi": "10.x.x",
+    "rejoice": "4.x.x",
+    "white-out": "2.x.x"
   },
   "devDependencies": {
-    "code": "3.x.x",
-    "lab": "10.x.x"
+    "code": "4.x.x",
+    "lab": "12.x.x"
   }
 }
