--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,24 @@ services:
       - redis
     command: npm start
     ports:
-      - "3000:3000"
+      - '3000'
     links:
       - redis
     environment:
-      - NODE_ENV='production'
+      - NODE_ENV=production
       - REDIS_URL=redis
+      - NPM_TOKEN
+    restart: unless-stopped
+  nginx:
+    image: 'nginx:alpine'
+    ports:
+      - '8080:8080'
+    volumes:
+      - ./config/nginx.conf:/etc/nginx/nginx.conf
+      - ./config/api.conf:/etc/nginx/conf.d/api.conf
+    links:
+      - api
   redis:
-    image: 'redis:3.2'
+    image: 'redis:3-alpine'
     ports:
       - '6379:6379'
